Fixed table spacing and dashboard visuals

--- a/ajenti/plugins/resources/files/10-basic.less
+++ b/ajenti/plugins/resources/files/10-basic.less
@@ -189,7 +189,7 @@
 
 
 .ui-el-image {
-    margin: 3px 2px;
+    margin: 6px 2px;
     display: inline-block;
 }
 
