--- a/ajenti/plugins/resources/files/inputs.less
+++ b/ajenti/plugins/resources/files/inputs.less
@@ -6,3 +6,7 @@ select {
         background: white;
     }
 }
+
+.ui-el-checkbox {
+	margin: 5px 3px;
+}
