--- a/ajenti/plugins/resources/files/tables.less
+++ b/ajenti/plugins/resources/files/tables.less
@@ -23,3 +23,7 @@
     font-weight: bold;
     border-right: 3px solid #c30;
 }
+
+table.zebra-striped > tbody > tr > td {
+    padding: 5px !important;
+}
